--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,viewport-fit=cover">
-    <title>Food Website</title>
-    <link rel="stylesheet" href="/index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Food Delivery Website</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="index.js"></script>
+    <script src="food items.js"></script>
+    <img src="images/index.image" alt="index.image">   
 </head>
 <body>
 
@@ -14,7 +16,7 @@
     <div class="container" id="container">
         <div id="menu">
             <div class="title">
-                <img src="/images/foodie hunter.png" alt="">
+                <img src="C:\Users\user\Food delivery web -Portfolio\index.image\index.image\Nigerian-fried-rice-recipe-main-photo-3.jpg" alt="">
             </div>
             <div class="menu-item">
                 <a href="#">About</a>
@@ -40,15 +42,15 @@
                 </div>
             </div>
             <div id="food-items" class="d-food-items">
-                <div id="biryani" class="d-biryani">
+                <div id="food" class="d-food">
                     <p id="category-name">Fufu</p>    
                 </div>
 
                 <div id="chicken" class="d-chicken">
-                    <p id="category-name">Banku</p>    
+                    <p id="category-name">Chicken</p>    
                 </div>
 
-                <div id="paneer" class="d-paneer">
+                <div id="Rice" class="d-rice">
                     <p id="category-name">Fried Rice</p>
                 </div>
 
@@ -60,7 +62,7 @@
                     <p id="category-name">Ghanaian Corner</p> 
                 </div>
 
-                <div id="south-indian" class="d-south-indian">
+                <div id="West Africa" class="d-west-africa">
                     <p id="category-name">West Africa</p>
                 </div>
             </div>
@@ -93,65 +95,15 @@
                 </div>
             </div>
             <div id="category-list">
-                <p class="item-menu">Go For Hunt</p>
+                <p class="item-menu">We Serve you based on your choice</p>
                 <div class="border"></div>                
             </div>
             <div id="checkout" class="cart-toggle">
                 <p id="total-item">Total Item : 5</p>
                 <p id="total-price"></p>
-                <p id="delievery">Free delivery on $ 40</p>
+                <p id="delievery">Free delivery on $ 35</p>
                 <button class="cart-btn">Checkout</button>
             </div>
-        </div>
-    </div>
-
-
-    <!-- mobile view -->
-    <div id="mobile-view" class="mobile-view">
-        <div class="mobile-top">
-            <div class="logo-box">
-                <img src="/images/foodielogo.png" alt="" id="logo">
-                <i class="fa fa-map-marker your-address" id="m-add-address"> Your Address</i>
-            </div>
-            <div class="top-menu">
-                <i class="fa fa-search"></i>
-                <i class="fa fa-tag"></i>
-                <i class="fa fa-heart-o"></i>
-                <i class="fa fa-cart-plus" id="m-cart-plus"> 0</i>
-            </div>
-        </div>
-        
-        <div class="item-container">
-            <div class="category-header" id="category-header">  
-            </div>
-
-            <div id="food-items" class="food-items">
-                <div id="biryani" class="m-biryani">
-                    <p id="category-name">Biryani</p>    
-                </div>
-                <div id="chicken" class="m-chicken">
-                    <p id="category-name">Chicken Delicious</p>    
-                </div>
-                <div id="paneer" class="m-paneer">
-                    <p id="category-name">Paneer Mania</p>
-                </div>
-                <div id="vegetable" class="m-vegetable">
-                    <p id="category-name">Pure Veg Dishes</p> 
-                </div>
-                <div id="chinese" class="m-chinese">
-                    <p id="category-name">Chinese Corner</p> 
-                </div>
-                <div id="south-indian" class="m-south-indian">
-                    <p id="category-name">South Indian</p>
-                </div>
-            </div>            
-        </div>
-
-        <div class="mobile-footer">
-            <p>Home</p>
-            <p>Cart</p>
-            <p>offers</p>
-            <p>orders</p>
         </div>
     </div>
     <script src="/index.js" type="module"></script>
